<resources>
    <string name="app_name">AreYouKittenMe</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="cats_background">Cats Background</string>
    <string name="play_again">Play Again</string>
    <string name="you_win">You Win!</string>
    <string name="im_ready">I\'m ready!</string>
    <string name="score">Score</string>
    <string name="play">Play</string>
    <string name="lose">Lose</string>
    <string name="maze_instructions">Oh no! The only way home is through this maze. Help Kitten safely exit the maze before it\'s too sleepy to move by avoiding enemies, eating cat nip to recharge and finding the right way home! Look out for butterflies - they may give you a special reward!</string>
    <string name="win">Win</string>
    <string name="aquarium_instructions">Kitten is hungry and went to the aquarium to eat some fish! Help Kitten eat all the fish before it gets caught. Swipe on the hand to pick up fish and drop them at the top. Be careful, don\'t touch the axolotls!</string>
    <string name="_2_00">2:00</string>
    <string name="maze_background">Maze Background</string>
    <string name="hp_50">HP 50</string>
    <string name="total_score">Total Score: </string>
    <string name="game_over">Game Over!</string>
    <string name="kitten_sprite">Kitten Sprite</string>
    <string name="instruction">Kitten is sleepy. Help Kitten complete all the obstacles before they fall asleep! Get them back home to take a nap.</string>
    <string name="your_mission">Your Mission</string>
    <string name="cat_back_background">cat back background</string>
    <string name="let_s_go">Let\'s go!</string>
    <string name="the_aquarium">The Aquarium</string>
    <string name="the_maze">The Maze</string>
</resources>