<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/game_over_cat_2"
    android:orientation="vertical"
    android:gravity="center">

    <TextView
        android:id="@+id/textView"
        android:layout_width="571dp"
        android:layout_height="73dp"
        android:layout_marginStart="0dp"
        android:layout_marginTop="60dp"
        android:text="@string/game_over"
        android:textColor="#fff"
        android:textSize="70sp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="10dp">

        <TextView
            android:id="@+id/totalScoreLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/total_score"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/tvScore"
            android:layout_width="292dp"
            android:layout_height="wrap_content"
            android:text="TextView"
            android:textColor="@color/white"
            android:textSize="24sp" />
    </LinearLayout>

    <Button
        android:id="@+id/restart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/play_again"
        android:layout_marginStart="-95dp"
        android:textColor="@color/black"
        android:background="#FFF450"
        android:textSize="40sp" />
</LinearLayout>