<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/fullscreenBackgroundColor"
    android:theme="@style/ThemeOverlay.AreYouKittenMe.FullscreenContainer">

    <ImageView
        android:id="@+id/cat_back"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:contentDescription="@string/cat_back_background"
        android:scaleType="centerCrop"
        android:src="@drawable/catback"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/titleInstruction"
        android:layout_width="242dp"
        android:layout_height="61dp"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="280dp"
        android:layout_marginBottom="276dp"
        android:background="@color/white"
        android:backgroundTint="#FFFFFF"
        android:text="@string/your_mission"
        android:textColor="#000000"
        android:textSize="40sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/instruction"
        android:layout_width="478dp"
        android:layout_height="96dp"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="152dp"
        android:layout_marginBottom="156dp"
        android:background="@color/white"
        android:backgroundTint="#FFFFFF"
        android:text="@string/instruction"
        android:textColor="#000000"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/startLevel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginStart="280dp"
        android:layout_marginTop="268dp"
        android:text="@string/let_s_go"
        android:textColor="#000000"
        android:textSize="40sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>
